--- a/public/css/app.css
+++ b/public/css/app.css
@@ -541,6 +541,10 @@ video {
 .m-4 {
   margin: 1rem;
 }
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -553,10 +557,6 @@ video {
   margin-top: 1.25rem;
   margin-bottom: 1.25rem;
 }
-.my-4 {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-}
 .my-2 {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
@@ -564,6 +564,9 @@ video {
 .my-3 {
   margin-top: 0.75rem;
   margin-bottom: 0.75rem;
+}
+.mt-2 {
+  margin-top: 0.5rem;
 }
 .mr-5 {
   margin-right: 1.25rem;
@@ -594,9 +597,6 @@ video {
 }
 .mb-10 {
   margin-bottom: 2.5rem;
-}
-.mt-2 {
-  margin-top: 0.5rem;
 }
 .mt-6 {
   margin-top: 1.5rem;
@@ -652,6 +652,9 @@ video {
 .h-32 {
   height: 8rem;
 }
+.h-10 {
+  height: 2.5rem;
+}
 .h-full {
   height: 100%;
 }
@@ -674,8 +677,8 @@ video {
 .h-3 {
   height: 0.75rem;
 }
-.h-10 {
-  height: 2.5rem;
+.h-2 {
+  height: 0.5rem;
 }
 .h-16 {
   height: 4rem;
@@ -690,12 +693,15 @@ video {
   max-height: -moz-fit-content;
   max-height: fit-content;
 }
+.w-full {
+  width: 100%;
+}
+.w-10 {
+  width: 2.5rem;
+}
 .w-max {
   width: -moz-max-content;
   width: max-content;
-}
-.w-full {
-  width: 100%;
 }
 .w-6 {
   width: 1.5rem;
@@ -724,8 +730,8 @@ video {
 .w-3 {
   width: 0.75rem;
 }
-.w-10 {
-  width: 2.5rem;
+.w-2 {
+  width: 0.5rem;
 }
 .w-6\/12 {
   width: 50%;
@@ -958,6 +964,21 @@ video {
 .border-b-gray-200\/10 {
   border-bottom-color: rgb(229 231 235 / 0.1);
 }
+.bg-gray-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
+}
+.bg-amber-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(217 119 6 / var(--tw-bg-opacity));
+}
+.bg-lime-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(101 163 13 / var(--tw-bg-opacity));
+}
+.bg-transparent {
+  background-color: transparent;
+}
 .bg-gray-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
@@ -974,10 +995,6 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(17 24 39 / var(--tw-bg-opacity));
 }
-.bg-gray-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
-}
 .bg-gray-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
@@ -985,13 +1002,6 @@ video {
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-.bg-amber-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(217 119 6 / var(--tw-bg-opacity));
-}
-.bg-transparent {
-  background-color: transparent;
 }
 .bg-amber-500 {
   --tw-bg-opacity: 1;
@@ -1001,13 +1011,13 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(75 85 99 / var(--tw-bg-opacity));
 }
-.bg-lime-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(101 163 13 / var(--tw-bg-opacity));
-}
 .bg-gray-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(156 163 175 / var(--tw-bg-opacity));
+}
+.\!bg-lime-300 {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(190 242 100 / var(--tw-bg-opacity)) !important;
 }
 .bg-yellow-500 {
   --tw-bg-opacity: 1;
@@ -1024,14 +1034,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-.bg-lime-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(190 242 100 / var(--tw-bg-opacity));
-}
-.\!bg-lime-300 {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(190 242 100 / var(--tw-bg-opacity)) !important;
 }
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
@@ -1110,6 +1112,9 @@ video {
   padding-left: 0.25rem;
   padding-right: 0.25rem;
 }
+.pl-2 {
+  padding-left: 0.5rem;
+}
 .pt-10 {
   padding-top: 2.5rem;
 }
@@ -1127,9 +1132,6 @@ video {
 }
 .pt-2 {
   padding-top: 0.5rem;
-}
-.pl-2 {
-  padding-left: 0.5rem;
 }
 .pb-4 {
   padding-bottom: 1rem;
@@ -1183,6 +1185,9 @@ video {
 .font-bold {
   font-weight: 700;
 }
+.font-normal {
+  font-weight: 400;
+}
 .font-light {
   font-weight: 300;
 }
@@ -1194,9 +1199,6 @@ video {
 }
 .font-thin {
   font-weight: 100;
-}
-.font-normal {
-  font-weight: 400;
 }
 .uppercase {
   text-transform: uppercase;
@@ -1216,6 +1218,14 @@ video {
 .leading-tight {
   line-height: 1.25;
 }
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.text-lime-600 {
+  --tw-text-opacity: 1;
+  color: rgb(101 163 13 / var(--tw-text-opacity));
+}
 .text-rose-800 {
   --tw-text-opacity: 1;
   color: rgb(159 18 57 / var(--tw-text-opacity));
@@ -1223,10 +1233,6 @@ video {
 .text-lime-800 {
   --tw-text-opacity: 1;
   color: rgb(63 98 18 / var(--tw-text-opacity));
-}
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 .text-amber-500 {
   --tw-text-opacity: 1;
@@ -1255,10 +1261,6 @@ video {
 .text-gray-200 {
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
-}
-.text-lime-600 {
-  --tw-text-opacity: 1;
-  color: rgb(101 163 13 / var(--tw-text-opacity));
 }
 .text-rose-400 {
   --tw-text-opacity: 1;
@@ -1685,6 +1687,16 @@ input {
   border-color: rgb(107 114 128 / var(--tw-border-opacity));
 }
 
+.hover\:bg-amber-500:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 158 11 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-lime-500:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(132 204 22 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-amber-700:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(180 83 9 / var(--tw-bg-opacity));
@@ -1703,16 +1715,6 @@ input {
 .hover\:bg-black:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-amber-500:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(245 158 11 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-lime-500:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(132 204 22 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-gray-500\/50:hover {
@@ -1912,8 +1914,16 @@ input {
     display: none !important;
   }
 
+  .lg\:flex-none {
+    flex: none;
+  }
+
   .lg\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .lg\:flex-row {
+    flex-direction: row;
   }
 
   .lg\:border-l-2 {
