--- a/public/css/app.css
+++ b/public/css/app.css
@@ -958,6 +958,10 @@ video {
   --tw-border-opacity: 1;
   border-color: rgb(31 41 55 / var(--tw-border-opacity));
 }
+.border-gray-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(107 114 128 / var(--tw-border-opacity));
+}
 .border-b-gray-200\/10 {
   border-bottom-color: rgb(229 231 235 / 0.1);
 }
@@ -1065,9 +1069,6 @@ video {
 }
 .p-2 {
   padding: 0.5rem;
-}
-.p-8 {
-  padding: 2rem;
 }
 .py-2 {
   padding-top: 0.5rem;
@@ -1695,16 +1696,6 @@ input {
 .peer:checked ~ .peer-checked\:bg-amber-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(252 211 77 / var(--tw-bg-opacity));
-}
-
-.peer:checked ~ .peer-checked\:text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
-.peer:checked ~ .peer-checked\:text-gray-800 {
-  --tw-text-opacity: 1;
-  color: rgb(31 41 55 / var(--tw-text-opacity));
 }
 
 .hover\:scale-105:hover {
