--- a/public/css/app.css
+++ b/public/css/app.css
@@ -760,14 +760,23 @@ video {
 .max-w-lg {
   max-width: 32rem;
 }
+.max-w-xs {
+  max-width: 20rem;
+}
 .flex-1 {
   flex: 1 1 0%;
+}
+.flex-none {
+  flex: none;
 }
 .flex-shrink-0 {
   flex-shrink: 0;
 }
 .flex-shrink {
   flex-shrink: 1;
+}
+.flex-grow {
+  flex-grow: 1;
 }
 .table-auto {
   table-layout: auto;
@@ -1154,6 +1163,9 @@ video {
 }
 .pt-2 {
   padding-top: 0.5rem;
+}
+.pr-2 {
+  padding-right: 0.5rem;
 }
 .pb-4 {
   padding-bottom: 1rem;
@@ -1937,12 +1949,12 @@ input {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
-  .md\:grid-cols-4 {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
-  }
-
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .md\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
   .md\:justify-end {
