--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -20,6 +20,14 @@
     @apply transform duration-300;
 }
 
+.search {
+  @apply w-full py-2 px-4 bg-gray-100/10 rounded-full text-gray-200;
+}
+
+.search-result {
+  @apply bg-gray-50 py-2 px-2 shadow-lg flex gap-2 hover:bg-gray-200 border-b-2 border-b-gray-200 cursor-pointer;
+}
+
 input[type="number"]::-webkit-inner-spin-button,
   input[type="number"]::-webkit-outer-spin-button {
     -webkit-appearance: none;
